--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "expo": "~49.0.5",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "expo-camera": "~13.4.2",
+    "expo-splash-screen": "~0.20.4",
+    "expo-status-bar": "~1.6.0",
+    "expo-av": "~13.4.1",
+    "react-native-reanimated": "~3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
